--- a/poketdo/src/main/resources/static/css/pocketdex.css
+++ b/poketdo/src/main/resources/static/css/pocketdex.css
@@ -783,7 +783,7 @@
   	align-items: center; /* 가운데 정렬 */
 }
 .pocket-input-container > div:last-child button {
-	margin-top : 20px;
+	
 	width:100%;
 }
 .pocket-input-box {
@@ -793,11 +793,25 @@
 }
 .pocket-input-box2 {
 	margin-top:10px;
-	width:50%;
+	width:100%;
 	display: flex;
+	margin-top : 40px;
 	justify-content: center; /* 가운데 정렬 */
   	align-items: center; /* 가운데 정렬 */
 }
+.pocket-input-box2 div{
+	width:30%;
+	margin: 0 auto;
+}
+.pocket-input-box2 div>button {
+	width:100%;
+	height:40px;
+}
+.pocket-input-box2 div>a {
+	width:100%;
+	height:40px;
+}
+
 .pocket-input-box > input {
 	width:100%;
 }
