--- a/poketdo/src/main/resources/static/css/page.css
+++ b/poketdo/src/main/resources/static/css/page.css
@@ -267,9 +267,9 @@ section.member-login-section form {
 .pocketmonTrade-info-footer {
   display: flex;
 }
-.pocketmonTradeReply {
+/* .pocketmonTradeReply {
   margin-left: auto;
-}
+} */
 .pocketmonTradeContent {
   min-height: 400px;
 }
