--- a/poketdo/src/main/resources/static/css/commons.css
+++ b/poketdo/src/main/resources/static/css/commons.css
@@ -857,3 +857,21 @@ main section article h1 {
   overflow: hidden;
   text-overflow: ellipsis;
 }
+/*---대문 페이지 css---*/
+.home-board-list{
+	overflow: auto;
+	padding:1em;
+}
+.home-board-type{
+	font-size : 17px;
+	display:inline-block;
+	width:70px;
+	text-align: center;
+	color:#1F3274;
+}
+.home-board-reply{
+	font-size : 16px;
+	display:inline-block;
+	text-align: center;
+	color:#AD000E;
+}
