--- a/poketdo/src/main/resources/static/css/commons.css
+++ b/poketdo/src/main/resources/static/css/commons.css
@@ -853,14 +853,19 @@ main section article h1 {
   cursor: default;
 }
 .do-not-over{
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
+  word-break:break-all;
 }
 /*---대문 페이지 css---*/
 .home-board-list{
 	overflow: auto;
 	padding:1em;
+	flex-grow: 1;
+	border: 2px solid #f2f4fb;
+	border-radius: 0.3em;
+	background-color: #fffdfd;
+	margin-top: 0.8em;
+	box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+	
 }
 .home-board-type{
 	font-size : 17px;
