--- a/poketdo/src/main/resources/static/css/commons.css
+++ b/poketdo/src/main/resources/static/css/commons.css
@@ -855,17 +855,21 @@ main section article h1 {
 .do-not-over{
   word-break:break-all;
 }
+.do-not-line-over{
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
 /*---대문 페이지 css---*/
 .home-board-list{
 	overflow: auto;
 	padding:1em;
 	flex-grow: 1;
-	border: 2px solid #f2f4fb;
+	border: 2px solid #F3F5FB;
 	border-radius: 0.3em;
 	background-color: #fffdfd;
 	margin-top: 0.8em;
-	box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-	
+	box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.06);
 }
 .home-board-type{
 	font-size : 17px;
